@@ -46,8 +46,6 @@ def keyboard( key, x, y )
 end
 
 if __FILE__ == $0
-  GLUT.load_dll()
-
   glutInit([1].pack('I'), [""].pack('p'))
   glutInitDisplayMode( GLUT_DOUBLE | GLUT_RGBA | GLUT_DEPTH )
   glutInitWindowSize(500, 100);
