@@ -72,8 +72,6 @@ $keyboard = GLUT.create_callback(:GLUTKeyboardFunc) do |key, x, y|
 end
 
 if __FILE__ == $0
-  GLUT.load_dll()
-
   glutInit([1].pack('I'), [""].pack('p'))
   glutInitDisplayMode( GLUT_DOUBLE | GLUT_RGBA | GLUT_DEPTH )
   glutInitWindowSize(500, 500);
