@@ -1,3 +1,8 @@
+2014-02-02  vaiorabbit  <https://twitter.com/vaiorabbit>
+
+	* sample/simple_glut.rb: Added.
+	* glut.rb: Fixed wrong glutTimerFunc signature.
+
 2014-01-31  vaiorabbit  <https://twitter.com/vaiorabbit>
 
 	* Updated using latest gl.xml.
